0.6.6-1.21.5
 - Adding Armor Storage block.
0.6.5-1.21.5
 - Migrating to 1.21.5
0.5.5-1.21.4
 - Migrating to 1.21.4
0.4.5-1.21.3
 - Migrating to 1.21.3
0.3.5-1.21.2 
 - Fixing issue with the recipe of neotool item.
0.3.4-1.21.2
 - Migrating to 1.21.2
0.2.4-1.21.1
 - Migrating to 1.21.1
 - Adding Mace to Weapon storage.
0.1.4-1.21.0
 - Migrating to 1.21.0
0.0.4-1.20.6
 - Adding Weapon Storage block.
0.0.3-1.20.6
 - Slots are increased following slots size.
0.0.2-1.20.6
 - Adding Tool Storage with 2 slots.
 - Adding Tool Storage with 3 slots.
 - Adding Tool Storage with 4 slots.
0.0.1-1.20.6
 - First commit.
 - Adding core item to build the storage block.
 - Adding Tool Storage block.
 - Adding Tool Storage implementation.
 - Adding Rendering tool storage information.