@@ -1,0 +1,9 @@
+{
+  "replace": false,
+  "values": [
+    "minecraft:leather_horse_armor",
+    "minecraft:iron_horse_armor",
+    "minecraft:diamond_horse_armor",
+    "minecraft:golden_horse_armor"
+  ]
+}
