@@ -1,0 +1,6 @@
+{
+  "replace": false,
+  "values": [
+    "minecraft:wolf_armor"
+  ]
+}
